# security

./: .gitignore  CHANGELOG.md  GEMINI.md  README.md  action.yml  badcode.py  gemini-extension.json  pyproject.toml  release-please-config.json
.github/: CODEOWNERS
.github/workflows/: gemini-dispatch.yml  gemini-review.yml  gemini-security.yml  package-and-upload-assets.yml
.github/workflows/examples/: security-review.yml
commands/security/: analyze-full.toml  analyze-github-pr.toml  analyze-new.toml  analyze.toml  analyzeFull.toml
docs/: .gitkeep
mcp-server/: package-lock.json  package.json  security.ts
mcp-server/src/: constants.ts  filesystem.test.ts  filesystem.ts  index.ts  knowledge.integration.test.ts  knowledge.test.ts  knowledge.ts  parser.test.ts  parser.ts  poc.test.ts  poc.ts  security.ts
mcp-server/src/codemaps/: graph_builder.ts  graph_service.ts
mcp-server/src/codemaps/parsers/: base_parser.ts  go_parser.ts  javascript_parser.ts  python_parser.ts  typescript_parser.ts
mcp-server/src/knowledge/: path_traversal.md
mcp-server/src/prompts/: analyze.ts  security_fix.test.ts  security_fix.ts
mcp_server/: mcp_server.py
